syntax = "proto3";

option csharp_namespace = "AuthManager.GRPC";

package AuthManager;

// The greeting service definition.
service Logout {
  // Sends a greeting
  rpc DoLogout (LogoutRequest) returns (LogoutResponse);
}

message LogoutRequest {
}

message LogoutResponse {
}